# annict-notify

./: Cargo.toml  README.md
migrations/2024-10-16-124821_init/: down.sql  up.sql
migrations/2024-10-23-184829_add_notify_activity_flag/: down.sql  up.sql
src/: annict.rs  db.rs  discord.rs  lib.rs  main.rs  models.rs  schema.rs
src/annict/: models.rs  query.rs
src/db/: test.rs
src/discord/: annict.rs  notify.rs
