[package]
name = "annict-notify"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "*"
tokio = { version = "*", features = ["rt-multi-thread", "macros"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
diesel = { version = "*", features = ["postgres", "chrono"] }
diesel_migrations = "*"
serenity = "*"
regex = "*"
chrono = { version = "*", features = ["serde"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
custom_debug = "*"
reqwest = { version = "*", features = ["json"] }
bitflags = "*"
